# fillit

./: CMakeLists.txt  Makefile  fillit  get_next_line.h  get_tetraminos.c  header.h
inc/: header.h
lib/libft/: Makefile
libft/: Makefile  ft_memalloc.c  ft_strsub.c  libft.mk
libft/src/conv/: ft_itoa.c
libft/src/lines/: get_next_line.c
srcs/: beyond_borders.c  board_new.c  form_alignment.c  form_free.c  form_new.c  get_next_line.c  if_overlap.c  is_it_tetra.c  main.c  mian.c  parser.c  read_and_check.c  solution.c  solve_algorithm.c
